@@ -1,5 +1,11 @@
 2007-10-28  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-style.c: (prepare_list):
+	* theme-util.c: (theme_is_writable), (theme_delete): simplify code
+	thanks to the new unified theme type
+
+2007-10-28  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-style.c: (changed_on_disk_cb): add support for live cursor
 	theme updates
 
